[package]
name = "twyg"
description = "A tiny logging setup for Rust applications"
readme = "README.md"
version = "0.2.0"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/twyg"
documentation = "https://docs.rs/twyg/"
categories = ["development-tools", "value-formatting"]
keywords = ["logging", "loggers", "formatting"]
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2021"

[lib]
name = "twyg"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
fern = { version = "0.6", features = ["colored"] }
log = "0.4"
owo-colors = "3.5.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
config = { version = "0.13.2", default-features = false, features = [ "yaml" ] }
confyg = "0.1.4"

[[example]]
name = "colour-caller"

[[example]]
name = "no-caller"

[[example]]
name = "no-colour"

[[example]]
name = "from-config"

[[example]]
name = "from-confyg"
