[package]
name = "twyg"
description = "A tiny logging setup for Rust applications"
readme = "README.md"
version = "0.6.1"
license = "Apache-2.0"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/twyg"
documentation = "https://docs.rs/twyg/"
categories = ["development-tools", "value-formatting"]
keywords = ["logging", "loggers", "formatting"]
exclude = ["/.github", "/assets", ".gitignore"]
edition = "2021"

[lib]
name = "twyg"

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
log = { version = "0.4.29", features = ["kv", "std"] }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
anyhow = "1.0.100"
config = { version = "0.15.19", default-features = false, features = ["yaml"] }
confyg = "0.3.0"
dotenvy = "0.15"
envy = "0.4"
serde_json = "1.0"

[[example]]
name = "colour-caller"

[[example]]
name = "no-caller"

[[example]]
name = "no-colour"

[[example]]
name = "from-config"

[[example]]
name = "from-confyg"

[[example]]
name = "stderr"

[[example]]
name = "structured-logging"
